обновил сваггер и добавил получение профиля по токену
