# docs/swagger.yaml
@@ -5,7 +5,7 @@ definitions:
         example: some error
         type: string
       status:
-        example: 500
+        example: 404
         type: integer
     type: object
   lib.ValidationError:
@@ -26,6 +26,30 @@ definitions:
       message:
         example: email is invalid
         type: string
+    type: object
+  model.AddRoleToUserDto:
+    properties:
+      title:
+        example: ADMIN
+        minLength: 3
+        type: string
+      user_id:
+        example: 1
+        minimum: 1
+        type: integer
+    required:
+    - title
+    - user_id
+    type: object
+  model.CreateRoleDto:
+    properties:
+      title:
+        example: ADMIN
+        maxLength: 55
+        minLength: 6
+        type: string
+    required:
+    - title
     type: object
   model.CreateUserDto:
     properties:
@@ -87,6 +111,9 @@ definitions:
       email:
         example: makc@mail.ru
         type: string
+      is_activated:
+        example: false
+        type: boolean
       password_hash:
         example: sdfsdfs222
         maxLength: 100
@@ -113,7 +140,127 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/user/:id:
+  /api/role/:
+    post:
+      consumes:
+      - application/json
+      description: Create role by body arguments
+      parameters:
+      - description: create role with body dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateRoleDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Create role
+      tags:
+      - roles
+  /api/role/add-to-user:
+    post:
+      consumes:
+      - application/json
+      description: Add role to user by body arguments
+      parameters:
+      - description: add role to user with body dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddRoleToUserDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Add role to user
+      tags:
+      - roles
+  /api/role/remove-from-user:
+    delete:
+      consumes:
+      - application/json
+      description: Remove role from user by body arguments
+      parameters:
+      - description: Remove role from user with body dto
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddRoleToUserDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            items:
+              $ref: '#/definitions/lib.AppErr'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Remove role from user
+      tags:
+      - roles
+  /api/user/by-id/:id:
     get:
       consumes:
       - application/json
@@ -134,10 +281,45 @@ paths:
         "400":
           description: Bad Request
           schema:
-            items:
-              $ref: '#/definitions/lib.AppErr'
-            type: array
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.AppErr'
       summary: Get user by id
+      tags:
+      - users
+  /api/user/lk:
+    get:
+      consumes:
+      - application/json
+      description: Get profile info by auth only
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+      security:
+      - BearerToken: []
+      summary: Get profile info
       tags:
       - users
   /api/user/login:
@@ -162,9 +344,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            items:
-              $ref: '#/definitions/lib.AppErr'
-            type: array
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.AppErr'
       summary: Login
       tags:
       - users
@@ -190,9 +378,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            items:
-              $ref: '#/definitions/lib.ValidationError'
-            type: array
+            $ref: '#/definitions/lib.ValidationError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.AppErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.AppErr'
       summary: Create user
       tags:
       - users
